Fixes #1901: apoc.uuid.install addToExistingNodes does not work (#1991)
Co-authored-by: JMHReif <jennifer@thehecklers.org>

Co-authored-by: Giuseppe Villani <giuseppe.villani@larus-ba.it>
Co-authored-by: JMHReif <jennifer@thehecklers.org>