@@ -26,7 +26,7 @@ public class Uuid {
     @Context
     public Transaction tx;
 
-    @Procedure(mode = Mode.DBMS)
+    @Procedure(mode = Mode.WRITE)
     @Description("CALL apoc.uuid.install(label, {addToExistingNodes: true/false, uuidProperty: 'uuid'}) yield label, installed, properties, batchComputationResult | it will add the uuid transaction handler\n" +
             "for the provided `label` and `uuidProperty`, in case the UUID handler is already present it will be replaced by the new one")
     public Stream<UuidInstallInfo> install(@Name("label") String label, @Name(value = "config", defaultValue = "{}") Map<String, Object> config) {
@@ -42,35 +42,44 @@ public class Uuid {
                             .next()
             );
         }
-        uuidHandler.add(tx, label, uuidConfig.getUuidProperty());
-        return Stream.of(new UuidInstallInfo(label, true, Collections.singletonMap("uuidProperty", uuidConfig.getUuidProperty()), addToExistingNodesResult));
+        uuidHandler.add(tx, label, uuidConfig);
+        return Stream.of(new UuidInstallInfo(label, true, 
+                Map.of("uuidProperty", uuidConfig.getUuidProperty(), "addToSetLabels", uuidConfig.isAddToSetLabels()), 
+                addToExistingNodesResult));
     }
 
     @Procedure(mode = Mode.WRITE)
     @Description("CALL apoc.uuid.remove(label) yield label, installed, properties | remove previously added uuid handler and returns uuid information. All the existing uuid properties are left as-is")
     public Stream<UuidInfo> remove(@Name("label") String label) {
-        String removed = uuidHandler.remove(label);
+        UuidConfig removed = uuidHandler.remove(label);
         if (removed == null) {
             return Stream.of(new UuidInfo(null, false));
         }
-        return Stream.of(new UuidInfo(label, false, Collections.singletonMap("uuidProperty", removed)));
+        return Stream.of(new UuidInfo(label, false, 
+                Map.of("uuidProperty", removed.getUuidProperty(), "addToSetLabels", removed.isAddToSetLabels())));
     }
 
     @Procedure(mode = Mode.WRITE)
     @Description("CALL apoc.uuid.removeAll() yield label, installed, properties | it removes all previously added uuid handlers and returns uuids information. All the existing uuid properties are left as-is")
     public Stream<UuidInfo> removeAll() {
-        Map<String, String> removed = uuidHandler.removeAll();
+        Map<String, UuidConfig> removed = uuidHandler.removeAll();
         if (removed == null) {
             return Stream.of(new UuidInfo(null, false));
         }
-        return removed.entrySet().stream().map(e -> new UuidInfo(e.getKey(), false, Collections.singletonMap("uuidProperty", e.getValue())));
+        return removed.entrySet().stream().map(e -> {
+            final UuidConfig conf = e.getValue();
+            return new UuidInfo(e.getKey(), false, Map.of("uuidProperty", conf.getUuidProperty(), "addToSetLabels", conf.isAddToSetLabels()));
+        });
     }
 
     @Procedure(mode = Mode.READ)
     @Description("CALL apoc.uuid.list() yield label, installed, properties | provides a list of all the uuid handlers installed with the related configuration")
     public Stream<UuidInfo> list() {
         return uuidHandler.list().entrySet().stream()
-                .map((e) -> new UuidInfo(e.getKey(),true, Collections.singletonMap("uuidProperty", e.getValue())));
+                .map((e) -> {
+                    final UuidConfig conf = e.getValue();
+                    return new UuidInfo(e.getKey(),true, Map.of("uuidProperty", conf.getUuidProperty(), "addToSetLabels", conf.isAddToSetLabels()));
+                });
     }
 
     public static class UuidInfo {
